Added pom.xml for the exercises and moved source files to typical directory.